[package]
name = "ytmctl"
version = "0.1.0"
authors = ["Michał Minarowski <neoney@pm.me>"]
edition = "2018"

[dependencies]
quicli = "0.4"
structopt = "0.3"
clap-verbosity-flag = "0.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"